# HTK-Android

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/lichard49/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  myfile.c  myfile.h  native-lib.cpp
app/src/main/cpp/HTKLib/: HShell.c  HWave.c  esignal.c
app/src/main/cpp/HTKTools/: HVite.c  HVite.h
app/src/main/cpp/include/: HelloJNI.h
app/src/main/java/com/lichard49/myapplication/: HTKService.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lichard49/myapplication/: ExampleUnitTest.java
